# chessy

./: CMakeLists.txt  CMakeLists.txt~  Makefile  README.md
src/: board.cc  board.cc~  board.hh  board.hh~  main.cc  main.cc~  piece.hh  piece.hh~
